dep. updates, types in apis
